examples/datalog/33_meta/20_session_info.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_session_info
Knowledge graph 'test_session_info' created.
Switched to knowledge graph: test_session_info
> .kg use test_session_info
Switched to knowledge graph: test_session_info
> .session info
Script error: Parse error: Unknown session subcommand: info. Use: clear, drop <n>
